--- a/public/css/sass-modules/_panelList.scss
+++ b/public/css/sass-modules/_panelList.scss
@@ -84,6 +84,7 @@
         position: absolute;
             right: 1rem;
             top: 1rem;
+        -webkit-transition: -webkit-transform .2s linear;
         transition: opacity .2s ease-in-out, transform .2s ease-in-out;
         width: 0;
     }
@@ -106,6 +107,7 @@
         }
 
         &:before {
+            -webkit-transform: scaleY(-1) translateY((5rem/16));
             transform: scaleY(-1) translateY((5rem/16));
         }
     }
