Added ability to delete events Fixes #50

--- a/public/css/sass-modules/_buttons.scss
+++ b/public/css/sass-modules/_buttons.scss
@@ -34,5 +34,6 @@ button, .button {
     width: 1rem;
 }
 
-.edit { background: url('images/pencil.svg') no-repeat 0 0 / 100% 100%; }
+.edit   { background: url('images/pencil.svg') no-repeat 0 0 / 100% 100%; }
+.delete { background: url('images/remove.svg') no-repeat 0 0 / 100% 100%; }
 .feedback { }
