--- a/public/css/screen.scss
+++ b/public/css/screen.scss
@@ -1,5 +1,6 @@
 @import 'sass-modules/_normalize';
 @import 'sass-modules/_vars-mixins';
+@import 'sass-modules/_eventSegment';
 @import 'sass-modules/_fonts';
 @import 'sass-modules/_footer';
 @import 'sass-modules/_responsiveNav.scss';
