--- a/public/css/sass-modules/_panels.scss
+++ b/public/css/sass-modules/_panels.scss
@@ -145,14 +145,16 @@
                     width: (18rem/16);
                 }
             }
-            &.edit   { background: url('images/pencil-white.svg') no-repeat 50% 50% / 80% 80%; }
-            &.delete { background: url('images/remove.svg')       no-repeat 50% 50% / 80% 80%; }
-            &.cancel {
+            &.edit   {
+                background: url('images/pencil-white.svg') no-repeat 50% 50% / 80% 80%;
+            }
+            &.cancel, &.delete {
                 &:before {
                     background: #fff;
                     content: ' ';
                     display: block;
                     height: (18rem/16);
+                    margin: 0;
                     position: absolute;
                         top: (3rem/16);
                         left: (11rem/16);
