Add some whitespace around the error panel dismiss button.
Additionally, add a container, permitting us to add more actions in a
consistent, predictable way.

--- a/public/css/sass-modules/_panels.scss
+++ b/public/css/sass-modules/_panels.scss
@@ -240,4 +240,7 @@ body:not(.admin) .errorPanel {
         left: 50%;
         z-index: 5;
     width: 30rem;
+    &-buttons {
+        margin: 1rem 0;
+    }
 }
