Rewrote date handling
We now use HTML5 date and time inputs, and expect browsers
to do the right thing.  Internally, event startDates,
startTimes, endDates, and endTimes are passed around as PHP
DateTime objects.  No more string parsing everywhere!

Fixes #113
Fixes #112

--- a/public/css/sass-modules/_field.scss
+++ b/public/css/sass-modules/_field.scss
@@ -1,10 +1,12 @@
-abbr.required {
-    color: $cob-red;
-    border-bottom-style: none;
-    font-size: 2em;
-    line-height: 0;
-    position: relative;
+.required label {
+    &:after {
+        content: ' *';
+        color: $cob-red;
+        font-size: 2em;
+        line-height: 0;
+        position: relative;
         top: .25em;
+    }
 }
 fieldset {
     margin: 1rem 0;
