--- a/public/css/sass-modules/_vars-mixins.scss
+++ b/public/css/sass-modules/_vars-mixins.scss
@@ -22,7 +22,7 @@ $cob-cornflower-dark: #24537b;
 $cob-cornflower-darkest: #12314c;
 
 // Action Green
-$cob-green: #20ac59;
+$cob-green: #23ae4d;
 $cob-green-light: #70bf88;
 $cob-green-lightest: #aaffac;
 
@@ -76,6 +76,7 @@ $color-filters-background: $cob-gray-dark;
 $color-filters-text: #fff;
 
 $size-font-default: 100%;
+$size-gutter: 4px;
 
 $font-weight-heading: 600;
 
