Event list HTMl and CSS rework
New styles and markup.  The javascript is mostly back to
working as expected.  Added a link to the view event screen.

Updates #154

--- a/public/css/sass-modules/_layout.scss
+++ b/public/css/sass-modules/_layout.scss
@@ -11,6 +11,11 @@
     }
 }
 
+#eventsList {
+        height: 100%;
+    overflow-x: auto;
+}
+
 .viewSingle, .eventEdit {
     > header {
         display: none;
@@ -19,8 +24,6 @@
         }
     }
     > main {
-//        min-height: 100%;
-
         > .headerBar {
             overflow-y: auto;
             position: absolute;
