--- a/public/css/sass-modules/_panelList.scss
+++ b/public/css/sass-modules/_panelList.scss
@@ -1,9 +1,7 @@
-.panelList {
-    background: #fff;
-    height: 100%;
-    overflow-x: auto;
+#eventsList {
+    background: $color-content-background;
 
-    > .emptyResult {
+    .emptyResult {
         margin: 2rem;
         &:before {
             background: url('images/empty-result-icon.svg') no-repeat 50% 50% / 100% 100%;
@@ -23,120 +21,52 @@
             margin: 0 0 1em 0;
         }
     }
-}
-.panelItem {
-    &-container {
-        position: relative;
-        border-left-width: (6rem/16);
-        border-left-style: solid;
+
+    summary {
+        &::-webkit-details-marker { display:none; }
+        list-style: none;
+
+        span { display:block; margin:0 16px; }
+        background: no-repeat top left/16px url('images/fa-svg/gray-darkest/caret-right.svg');
+    }
+
+    details {
+        &[open] > summary { background-image: url('images/fa-svg/gray-darkest/caret-down.svg'); }
+        border-left-style:solid;
+        border-left-width:4px;
+        border-bottom: 1px solid $cob-gray;
+
+        div { margin-left:16px; }
 
         &.hasGeography {
-            &:before {
-                background: url('images/locationMarker-listing.svg') no-repeat 50% 50% / contain;
-                content: ' ';
-                display: block;
-                height: 1rem;
-                opacity: .5;
-                pointer-events: none;
-                position: absolute;
-                    top: .75rem;
-                    right: 1rem;
-                @media screen and (min-width: $window-medium) {
-                    top: .75rem;
-                    right: 2rem;
-                }
-                width: 1rem;
-            }
+            background:no-repeat top 4px right 4px/16px url('images/locationMarker-listing.svg');
         }
-        &:hover.hasGeography {
-            &:before {
-                opacity: 1;
-            }
-        }
-    }
-    border-left-style: solid;
-    border-left-width: 0;
-    display: block;
-    margin: 0;
-    padding: .5rem (6rem/16) .125rem .5rem;
 
-    &:after {
-        background-color: $cob-gray;
-        content: ' ';
-        display: block;
-        height: (1rem/16);
-        position: absolute;
-            right: .5rem;
-            bottom: 0;
-            left: .5rem;
-    }
-
-    @media screen and (min-width: $window-medium) {
-        &:before {
-            border: (5rem/16) solid transparent;
-            border-top: (5rem/16) solid $cob-gray-darkest;
-            content: ' ';
-            display: block;
-            height: 0;
-            opacity: .5;
-            position: absolute;
-                right: 1rem;
-                top: 1rem;
-            width: 0;
+        h2 {
+            font-family: $font-family-default;
+            font-size: (14rem/16);
         }
-    }
-    &:hover {
-        background: #e7edf4;
-        &:before {
-            opacity: 1;
+        .title { color: $color-link; }
+        .dates {
+            color: $cob-gray-dark;
+            font-size: (12rem/16);
         }
-    }
-    &.current {
-        background: #e7edf4;
-        border-left-width: (6rem/16);
-        padding-right: 0;
-
+        .type        { display:none; }
         .description {
-            display:block;
+            color: $cob-gray-darkest;
+            font-size: (14rem/16);
+            line-height: 1.25em;
+            padding: 0 0 (10rem/16) 0;
         }
+        .geography   { display:none; }
 
-        &:before {
-            $translateDistance: (5rem/16);
-            -webkit-transform: scaleY(-1) translateY($translateDistance);
-            transform: scaleY(-1) translateY($translateDistance);
+        @media screen and (min-width: 84rem) {
+            > .title {
+                font-size: (16rem/16);
+            }
+            > .dates {
+                font-size: (13rem/16);
+            }
         }
     }
-    h2 {
-        font-family: $font-family-default;
-        font-size: (14rem/16);
-    }
-    .title {
-        color: $color-link;
-        margin: 0 3rem (2rem/16) 0;
-    }
-    .dates {
-        color: $cob-gray-dark;
-        display: block;
-        font-size: (12rem/16);
-        padding: 0 2.5rem .5rem 0;
-    }
-    .type        { display:none; }
-    .description {
-        color: $cob-gray-darkest;
-        display:none;
-        font-size: (14rem/16);
-        line-height: 1.25em;
-        padding: 0 0 (10rem/16) 0;
-    }
-    .geography   { display:none; }
-
-    @media screen and (min-width: 84rem) {
-        > .title {
-            font-size: (16rem/16);
-        }
-        > .dates {
-            font-size: (13rem/16);
-        }
-    }
-
 }
