Renamed panelList to eventsList
This better matches the elements the css is styling

--- a/public/css/screen.scss
+++ b/public/css/screen.scss
@@ -15,7 +15,7 @@
 @import 'sass-modules/_buttons';
 @import 'sass-modules/_tables';
 @import 'sass-modules/_panels';
-@import 'sass-modules/_panelList';
+@import 'sass-modules/eventsList';
 @import 'sass-modules/_pillNav';
 @import 'sass-modules/_openLayers';
 @import 'sass-modules/_selector.scss';
