--- a/public/css/sass-modules/_menu.scss
+++ b/public/css/sass-modules/_menu.scss
@@ -10,7 +10,7 @@
         background-repeat: no-repeat;
         background-position: $size-gutter center;
         background-size: ($size-gutter*2) ($size-gutter*2);
-        background-image:url('images/chevron-down.svg'); padding-left:1.7em;
+        background-image:url('images/fa-svg/white/chevron-down.svg'); padding-left:1.7em;
 
         &[aria-expanded="true"] + .links {
             display:block;
