--- a/ansible/templates/site_config.j2
+++ b/ansible/templates/site_config.j2
@@ -1,10 +1,10 @@
 <?php
-define('APPLICATION_NAME','inroads');
-define('APPLICATION_HOST', $_SERVER['SERVER_NAME']);
-define('APPLICATION_DESCRIPTION', 'description');
+define('APPLICATION_NAME','inRoads');
+define('APPLICATION_HOST', '{{ ansible_host }}');
+define('APPLICATION_DESCRIPTION', '{{ inroads_site_config.application_description }}');
 
 // Replace this value with your city's Twitter handle
-define('APPLICATION_TWITTER_SITE', '@twitter_handle');
+define('APPLICATION_TWITTER_SITE', '{{ inroads_site_config.twitter_site }}');
 
 /**
  * URL Generation settings
@@ -15,9 +15,11 @@ define('APPLICATION_TWITTER_SITE', '@twitter_handle');
  * of the proxy server.  PROXY_URL will be used instead of BASE_URL
  * in non-web contexts, such as email notifications.
  */
-define('BASE_URI' , '/inroads');
-#define('PROXY_HOST', 'some.host.org');
-#define('PROXY_URL', 'https://'.PROXY_HOST.BASE_URI);
+define('BASE_URI' , '{{ inroads_base_uri }}');
+{% if inroads_proxy %}
+define('PROXY_HOST', '{{ inroads_proxy }}');
+define('PROXY_URL', 'https://'.PROXY_HOST.BASE_URI);
+{% endif %}
 define('BASE_HOST', (defined('PROXY_HOST')
                         && isset($_SERVER['HTTP_X_FORWARDED_HOST'])
                         &&       $_SERVER['HTTP_X_FORWARDED_HOST'] == PROXY_HOST)
@@ -42,8 +44,10 @@ define('BASE_URL' , "https://".BASE_HOST.BASE_URI);
 define('OPENLAYERS', BASE_URI.'/js/vendor/ol3');
 $MAPLAYERS = [
     [
-        'source'  => 'OSM',
-        'options' => []
+        'source'  => 'XYZ',
+        'options' => [
+            'url' => 'https://api.tiles.mapbox.com/v4/mapbox.streets/{z}/{x}/{y}.png?access_token={{ inroads_site_config.mapbox_key }}'
+        ]
     ]
 ];
 
@@ -54,19 +58,19 @@ $MAPLAYERS = [
 $DATABASES = [
     'default' => [
         'driver'   => 'Pdo_Mysql',
-        'dsn'      => 'mysql:dbname=inroads;host=localhost',
-        'username' => 'user',
-        'password' => 'pass',
+        'dsn'      => 'mysql:dbname={{ inroads_db.name }};host={{ inroads_db.host }}',
+        'username' => '{{ inroads_db.user }}',
+        'password' => '{{ inroads_db.pass }}',
         'options'  => []
     ]
 ];
 
 define('GOOGLE_CREDENTIALS_FILE', __DIR__.'/credentials.json');
-define('GOOGLE_CALENDAR_ID', '--some-calendar-id--@group.calendar.google.com');
-define('GOOGLE_USER_EMAIL', 'username@gmail.com');
-define('GOOGLE_GROUP', 'groupname@googlegroups.com');
+define('GOOGLE_CALENDAR_ID', '{{ inroads_google.calendar }}');
+define('GOOGLE_USER_EMAIL',  '{{ inroads_google.user     }}');
+define('GOOGLE_GROUP',       '{{ inroads_google.group    }}');
 
-define('ADDRESS_SERVICE', 'http://localhost/master_address');
+define('ADDRESS_SERVICE', '{{ inroads_site_config.address_service }}');
 
 /**
  * Authentication Configuration
@@ -98,10 +102,12 @@ $AUTHENTICATION_METHODS = [
 //      'admin_binding'      => 'uid=admin,'.DIRECTORY_BASE_DN,
 //      'admin_pass'         => 'password',
 //  ]
-//  'Employee' => [
-//      'classname' => 'Site\Employee',
-//      'server'    => 'http://localhost/directory',
-//  ]
+{% if inroads_site_config.directory_service %}
+    'Employee' => [
+        'classname' => 'Site\Employee',
+        'server'    => '{{ inroads_site_config.directory_service }}',
+    ]
+{% endif %}
 ];
 
 /**
@@ -115,8 +121,10 @@ $AUTHENTICATION_METHODS = [
  * Comment this out to disable CAS authentication
  * Uncomment to enable
  */
-//define('CAS_SERVER','cas.somewhere.org');
-//define('CAS_URI','cas');
+{% if inroads_site_config.cas_host %}
+define('CAS_SERVER','{{ inroads_site_config.cas_host }}');
+define('CAS_URI','cas');
+{% endif %}
 
 /**
  * Auth0 authentication https://auth0.com
@@ -124,19 +132,21 @@ $AUTHENTICATION_METHODS = [
  * Comment this out to disable Auth0 authentication
  * Uncomment to enable
  */
-//$AUTH0 = [
-//    'domain'        => 'somewhere.auth0.com',
-//    'client_id'     => 'HASH CODE',
-//    'client_secret' => 'SECRET API KEY'
-//];
+{% if inroads_auth0.domain %}
+$AUTH0 = [
+    'domain'        => '{{ inroads_auth0.domain    }}',
+    'client_id'     => '{{ inroads_auth0.client_id }}',
+    'client_secret' => '{{ inroads_auth0.api_key   }}'
+];
+{% endif %}
 
 /**
  * Controls whether the system sends email notifications to people
  *
  * Notifications will be sent using the ADMINISTRATOR_EMAIL as the FROM
  */
-//define('NOTIFICATIONS_ENABLED', true);
-define('ADMINISTRATOR_EMAIL','admin@servername.com');
+define('NOTIFICATIONS_ENABLED', true);
+define('ADMINISTRATOR_EMAIL','inroads@{{ ansible_host }}');
 
 define('DATE_FORMAT', 'n/j/Y');
 define('TIME_FORMAT', 'H:i a');
@@ -148,9 +158,11 @@ define('LOCALE', 'en_US');
  * logging errors to a Skidder server.  You must register for an application_id
  * on the skidder server you want to post errors to.
  */
-//$writer = new Blossom\Classes\Log\SkidderWriter('http://localhost/skidder/index', 100 );
-//$logger = new Zend\Log\Logger();
-//$logger->addWriter($writer);
-//Zend\Log\Logger::registerErrorHandler($logger);
-//Zend\Log\Logger::registerExceptionHandler($logger);
-//Zend\Log\Logger::registerFatalErrorShutdownFunction($logger);
+{% if inroads_skidder.application_id %}
+$writer = new Blossom\Classes\Log\SkidderWriter('{{ inroads_skidder.server }}', {{ inroads_skidder.application_id }} );
+$logger = new Zend\Log\Logger();
+$logger->addWriter($writer);
+Zend\Log\Logger::registerErrorHandler($logger);
+Zend\Log\Logger::registerExceptionHandler($logger);
+Zend\Log\Logger::registerFatalErrorShutdownFunction($logger);
+{% endif %}
